@@ -440,3 +440,4 @@
              devices in fhem (Boris 2008-11-02)
   - feature: X10 support for pgm3 (Boris 2008-11-02)
   - bugfix:  FHT short message warning
+  - bugfix:  correct correction factors for EMEM in 15_CUL_EM.pm
